# wingline

./: .coverage.ubuntu2110.localdomain.91536.175074  .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  tasks.py
.github/workflows/: coverage.yaml  lint.yaml  test.yaml
examples/data/: deliberately-unrecognizable-file.wtf
examples/scripts/dynamodb_tv/: 0_check_input_file.py  10_writing_a_file.py  1_our_first_pipeline.py  2_visualizing_the_graph.py  3_trying_a_helper.py  4_processes_with_parameters.py  5_writing_our_own_process.py  6_the_intermediate_cache.py  7_another_helper.py  8_each_processes.py  9_key_manipulation.py
tests/: conftest.py  test_intermediate_cache.py
tests-old/: __init__.py  test_cli.py  test_pingpong.py  test_pipe.py
tests-old/cases/: operations.py
tests-old/files/: test_file.py  test_file_pipe.py  test_filetype.py
tests-old/helpers/: test_printers.py
tests-old/pipe_hash/: cases.py
tests-old/plumbing/: test_execution_plan.py  test_pipeline.py
tests/cases/: files.py
tests/examples/: test_wikidata_dynamodb.py
tests/files/: test_file.py  test_file_cases.py  test_formats.py  test_reader.py  test_writer.py
tests/graph/: test_graph.py
tests/helpers/: test_datetime.py  test_dynamodb.py  test_keys.py  test_printers.py  test_ranges.py
tests/pipe_hash/: test_pipe_hash.py
tests/pipeline/: test_pipeline.py  test_write.py
tests/plumbing/: test_basic.py  test_cachepipe.py  test_eachpipe.py  test_file.py  test_file_cases.py  test_pipe.py  test_tap.py  test_writer.py  test_writersink.py
tests/ui/: test_ui_graph.py  test_ui_no_rich.py
tools/sample-data-generator/: compose.yml  generate-sample-data.sh
wingline/: __init__.py  __main__.py  cli.py  exceptions.py  graph.py  hasher.py  json.py  log.py  pingpong.py  pipeline.py  process_chain.py  settings.py  types.py  ui.py
wingline/cache/: intermediate.py
wingline/files/: cached_file.py  detect.py  file.py  filetype.py  filewriter.py  reader.py  writer.py
wingline/files/containers/: __init__.py  _base.py  bare.py  gzip.py  zip.py
wingline/files/formats/: __init__.py  _base.py  csv.py  json_lines.py  msgpack.py
wingline/helpers/: __init__.py  datetime.py  dynamodb.py  keys.py  printers.py  ranges.py
wingline/hooks/: __init__.py  _base.py  hash_content.py  log.py
wingline/plumbing/: base.py  hooks.py  intermediate_cache.py  pipe.py  queue.py  sink.py  tap.py  utils.py
wingline/plumbing-old/: __init__.py  base.py  execution.py  file.py  pipe.py  pipeline.py  tap.py  writer.py
wingline/plumbing/caching/: cachereader.py  cachewriter.py
wingline/plumbing/pipes/: allpipe.py  basepipe.py  cachereader.py  cachewriter.py  eachpipe.py  processpipe.py
wingline/plumbing/sinks/: iterator.py  iteratorsink.py  writer.py  writersink.py
wingline/plumbing/taps/: filetap.py
