[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wingline"
version = "0.1.1"
description = "A simple line-based data reader and translator"
authors = ["Dave Singer <dave.singer@einara.com>"]
license = "MIT"
readme = "README.md"

[tool.isort]
profile = "black"
known_first_party = "wingline"

[tool.vulture]
paths = ["wingline", "tests"]
exclude = ["settings.py"]

[tool.poetry.dependencies]
python = "^3.7.0"
fastapi = "^0.65.2"
pydantic = "^1.8.1"
requests = "^2.25.1"
filetype = "^1.0.10"
cachelib = "^0.6.0"
pytest-cases = { version = "^3.6.11", extras = ["tests"] }
dill = "^0.3.4"
msgpack = "^1.0.3"

[tool.poetry.dev-dependencies]
nox = "^2021.10.1 "
cruft = "^2.10.1"
invoke = "^1.6.0"
GitPython = "^3.1.27"
semver = "^2.13.0"

[tool.poetry.extras]
dev = ["ipdb", "pudb", "pytest-pudb", "uvicorn"]
lint = [
  "flake8-bugbear",
  "mypy",
  "pep8-naming",
  "pylint",
  "pre-commit",
  "isort",
  "black",
]
security = ["bandit", "safety"]
tests = ["gitpython", "semver", "pytest-cov", "pytest-xdist", "coverage"]

[tool.poetry.scripts]
wingline = "wingline.cli:app"

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.poetry.dependencies.typer]
extras = ["all"]
version = ">=0.3.2,<1.0"

[tool.poetry.dependencies.bandit]
version = "^1.7.0"
optional = true

[tool.poetry.dependencies.black]
version = "^21.5b0"
optional = true

[tool.poetry.dependencies.coverage]
version = "^5.5"
optional = true

[tool.poetry.dependencies.flake8-bugbear]
version = "^21.4.3"
optional = true

[tool.poetry.dependencies.gitpython]
version = "^3.1.14"
optional = true

[tool.poetry.dependencies.ipdb]
version = "^0.13.7"
optional = true

[tool.poetry.dependencies.isort]
version = "^5.8.0"
optional = true

[tool.poetry.dependencies.mypy]
version = "^0.812"
optional = true

[tool.poetry.dependencies.pep8-naming]
version = "^0.11.1"
optional = true

[tool.poetry.dependencies.pre-commit]
version = "^2.11.1"
optional = true

[tool.poetry.dependencies.pudb]
version = "^2022.1"
optional = true

[tool.poetry.dependencies.pylint]
version = "^2.7.4"
optional = true

[tool.poetry.dependencies.pytest]
version = "^6.2.2"
optional = true

[tool.poetry.dependencies.pytest-cov]
version = "^2.11.1"
optional = true

[tool.poetry.dependencies.pytest-pudb]
version = "^0.7.0"
optional = true

[tool.poetry.dependencies.pytest-xdist]
version = "^2.2.1"
optional = true

[tool.poetry.dependencies.safety]
version = "^1.10.3"
optional = true

[tool.poetry.dependencies.semver]
version = "^2.13.0"
optional = true
