[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wingline"
version = "0.1.2"
description = "A simple line-based data reader and translator"
authors = ["Dave Singer <dave.singer@einara.com>"]
license = "MIT"
readme = "README.md"

[tool.isort]
profile = "black"
known_first_party = "wingline"

[tool.vulture]
paths = ["wingline", "tests"]
exclude = ["settings.py", "tests/files/test_file_cases.py"]

[tool.poetry.dependencies]
python = "^3.7.0"
filetype = "^1.0.10"
cachelib = "^0.6.0"
dill = "^0.3.4"
msgpack = "^1.0.3"
rich = { version = "^12.0.1", optional = true }
pytest-cases = { version = "^3.6.11", optional = true }
msgpack-types = { version = "^0.2.0", optional = true }
pydantic = "^1.9.0"
python-dateutil = "^2.8.2"
types-python-dateutil = { version = "^2.8.10", optional = true }
inflection = "^0.5.1"
"yapic.json" = { version = "^1.7.2", optional = true }
ujson = { version = "^5.2.0", optional = true }

[tool.poetry.dev-dependencies]
nox = "^2021.10.1 "
cruft = "^2.10.1"
invoke = "^1.6.0"
GitPython = "^3.1.27"
semver = "^2.13.0"

[tool.poetry.extras]
dev = ["ipdb", "pudb", "pytest-pudb", "uvicorn"]
lint = [
  "flake8-bugbear",
  "mypy",
  "pep8-naming",
  "pylint",
  "pre-commit",
  "isort",
  "black",
  "msgpack-types",
  "types-python-dateutil",
]
security = ["bandit", "safety"]
tests = [
  "gitpython",
  "semver",
  "pytest-cov",
  "pytest-xdist",
  "coverage",
  "pytest-cases",
  "rich",
  "yapic.json",
]
ui = ["rich"]
yapic = ["yapic.json"]
ujson = ["ujson"]

[tool.coverage.run]
omit = ["*/vendored/*"]

[tool.poetry.scripts]
wingline = "wingline.cli:app"

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.poetry.dependencies.typer]
extras = ["all"]
version = ">=0.3.2,<1.0"

[tool.poetry.dependencies.bandit]
version = "^1.7.0"
optional = true

[tool.poetry.dependencies.black]
version = "^21.5b0"
optional = true

[tool.poetry.dependencies.coverage]
extras = ["toml"]
version = "^5.5"
optional = true

[tool.poetry.dependencies.flake8-bugbear]
version = "^21.4.3"
optional = true

[tool.poetry.dependencies.gitpython]
version = "^3.1.14"
optional = true

[tool.poetry.dependencies.ipdb]
version = "^0.13.7"
optional = true

[tool.poetry.dependencies.isort]
version = "^5.8.0"
optional = true

[tool.poetry.dependencies.mypy]
version = "^0.812"
optional = true

[tool.poetry.dependencies.pep8-naming]
version = "^0.11.1"
optional = true

[tool.poetry.dependencies.pre-commit]
version = "^2.11.1"
optional = true

[tool.poetry.dependencies.pudb]
version = "^2022.1"
optional = true

[tool.poetry.dependencies.pylint]
version = "^2.7.4"
optional = true

[tool.poetry.dependencies.pytest]
version = "^6.2.2"
optional = true

[tool.poetry.dependencies.pytest-cov]
version = "^2.11.1"
optional = true

[tool.poetry.dependencies.pytest-pudb]
version = "^0.7.0"
optional = true

[tool.poetry.dependencies.pytest-xdist]
version = "^2.2.1"
optional = true

[tool.poetry.dependencies.safety]
version = "^1.10.3"
optional = true

[tool.poetry.dependencies.semver]
version = "^2.13.0"
optional = true
